local work correct try github action

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,2 +1,12 @@
-# Unique key for this project in SonarQube
-sonar.projectKey=NodeJs-Demo
+# A unique key for your project
+sonar.projectKey=test-runner-app
+
+# Project's name and version
+sonar.projectName=Test Runner App
+sonar.projectVersion=1.0
+
+# Path to the source code to be analyzed
+sonar.sources=src
+
+# Encoding of the source files
+sonar.sourceEncoding=UTF-8
